Fixed location of Canada office to Victoria

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 										</a>
 									</h3>
 								<address>
-									Canada, Vancouver<br/>
+									Canada, Victoria<br/>
 									1581 Granada crest<br/>
 									<i class="fa fa-phone" aria-hidden="true">&nbsp;</i><abbr title="Phone">P:</abbr>&nbsp;<span>+1 250 891 5430<span><br/>
 									<i class="fa fa-envelope" aria-hidden="true">&nbsp;</i><abbr title="Mail">M:</abbr>&nbsp;<a href="mailto:ca.office@pixelvalue.io">ca.office@pixelvalue.io</a>
